# gdash-vita

./: CMakeLists.txt  LICENSE  README.md
lib/libc_bridge/: libc_bridge.h  nids.yml
lib/so_util/: so_util.c
source/: dynlib.c  dynlib.h  falso_jni_impl.c  fmod.c  fmod.h  fmod_symbols.h  main.c  main.h  openssl_patch.c  openssl_patch.h  patch.c  patch.h
source/reimpl/: _errno_bionic.h  _struct_converters.c  ctype_patch.c  env.c  env.h  errno.c  errno.h  io.c  io.h  ioctl.c  ioctl.h  log.c  log.h  mem.c  mem.h  pthr.c  pthr.h  sys.c  sys.h
source/utils/: dialog.c  dialog.h  glutil.c  glutil.h  init.c  init.h  logger.c  logger.h  settings.c  settings.h  utils.c  utils.h
